front/kubernetes/staging/namespace.yaml
kind: Namespace  
apiVersion: v1  
metadata:  
 name: nomidot-frontend-staging
 labels:  
   name: nomidot-frontend-staging
