front/kubernetes/staging/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nomidot-frontend
  namespace: nomidot-frontend-staging
spec:
  selector:
    matchLabels:
      app: nomidot-frontend
      tier: frontend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: nomidot-frontend
        tier: frontend
        track: stable
    spec:
      containers:
      - name: nomidot-frontend
        image: eu.gcr.io/test-installations-222013/nomidot-frontend@sha256:d5bd86633f2aa41a8cbbb0e46e634b03388a816ea55864cc0da853f4b3851eea
