front/kubernetes/staging/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: nomidot-frontend
spec:
  selector:
    app: nomidot
    tier: nomidot-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
